FIX: more gap between post header and comments

--- a/src/styles/_posts.scss
+++ b/src/styles/_posts.scss
@@ -108,7 +108,7 @@
     .postPage & {
 
       @include media-breakpoint-up($desktop-breakpoint) {
-        margin-bottom: 5px;
+        margin-bottom: 10px;
         padding-bottom: 16px;
 
         &:after {
